fixed email in phone screen with word-wrap

--- a/code/style.css
+++ b/code/style.css
@@ -101,6 +101,7 @@ main {
   padding: 16px 24px;
   color: #fff;
   max-width: 40%;
+  word-wrap: break-word;
 }
 
 .bot-bubble {
